[project]
name = "barks-build-comic-images"
version = "0.1.0"
description = "Provides a class to help with building Barks comic images."
readme = "README.md"
authors = [
    { name = "glk1001", email = "gregg.kay@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pillow>=11.3.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
